<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="개인 설정">

        <EditTextPreference
            app:key="id"
            app:title="이름 설정"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="#00ff00"
            app:entries="@array/my_textsize"
            app:entryValues="@array/my_textsize_values"
            app:key="textsize"
            app:title="글씨 크기"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <ListPreference
            app:defaultValue="#00ff00"
            app:entries="@array/my_color"
            app:entryValues="@array/my_color_values"
            app:key="color"
            app:title="색상 선택"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

</PreferenceScreen>